Revision history for {{$dist->name}}

{{$NEXT}}

0.1.1     2011-02-15 11:45:14 Australia/Sydney
    Added prereqs

0.1.0     2011-02-14 20:58:31 Australia/Sydney
    Fixed massive breakage (didn't work at all)
    Added some tests

0.0.1     2011-02-11 20:39:05 Australia/Sydney
    First version