@@ -1,5 +1,5 @@
 name    = Dist-Zilla-PluginBundle-CEBJYRE
-version = 0.1.1
+version = 0.2.0
 author  = Glenn Fowler <cebjyre@cpan.org>
 license = Perl_5
 copyright_holder = Glenn Fowler
